src/units/UnitsParser.java
// Generated from Units.g4 by ANTLR 4.7.1

package unitsGrammar.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UnitsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		EOL=18, ID=19, STRING=20, NUMBER=21, COMMENTS=22, WS=23, ERROR=24;
	public static final int
		RULE_unitsFile = 0, RULE_declaration = 1, RULE_unitsDeclaration = 2, RULE_unit = 3, 
		RULE_unitsEquivalence = 4, RULE_equivalentUnit = 5, RULE_unitsDerivation = 6, 
		RULE_structureDeclaration = 7, RULE_structure = 8, RULE_unitsAssociation = 9, 
		RULE_prefixDeclaration = 10, RULE_prefix = 11, RULE_value = 12;
	public static final String[] ruleNames = {
		"unitsFile", "declaration", "unitsDeclaration", "unit", "unitsEquivalence", 
		"equivalentUnit", "unitsDerivation", "structureDeclaration", "structure", 
		"unitsAssociation", "prefixDeclaration", "prefix", "value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'units'", "'{'", "'}'", "':'", "'['", "']'", "'|'", "'('", "')'", 
		"'*'", "'/'", "'^'", "'structures'", "'&'", "'prefixes'", "'-'", "'+'", 
		"';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "EOL", "ID", "STRING", "NUMBER", "COMMENTS", 
		"WS", "ERROR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Units.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UnitsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class UnitsFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(UnitsParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public UnitsFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitsFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnitsFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnitsFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnitsFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitsFileContext unitsFile() throws RecognitionException {
		UnitsFileContext _localctx = new UnitsFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_unitsFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__12) | (1L << T__14))) != 0)) {
				{
				{
				setState(26);
				declaration();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public UnitsDeclarationContext unitsDeclaration() {
			return getRuleContext(UnitsDeclarationContext.class,0);
		}
		public StructureDeclarationContext structureDeclaration() {
			return getRuleContext(StructureDeclarationContext.class,0);
		}
		public PrefixDeclarationContext prefixDeclaration() {
			return getRuleContext(PrefixDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(37);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				unitsDeclaration();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				structureDeclaration();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				prefixDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitsDeclarationContext extends ParserRuleContext {
		public List<UnitContext> unit() {
			return getRuleContexts(UnitContext.class);
		}
		public UnitContext unit(int i) {
			return getRuleContext(UnitContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(UnitsParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(UnitsParser.EOL, i);
		}
		public UnitsDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitsDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnitsDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnitsDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnitsDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitsDeclarationContext unitsDeclaration() throws RecognitionException {
		UnitsDeclarationContext _localctx = new UnitsDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unitsDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__0);
			setState(40);
			match(T__1);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(41);
				unit();
				setState(42);
				match(EOL);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContext extends ParserRuleContext {
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
	 
		public UnitContext() { }
		public void copyFrom(UnitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Unit_BasicContext extends UnitContext {
		public TerminalNode ID() { return getToken(UnitsParser.ID, 0); }
		public TerminalNode STRING() { return getToken(UnitsParser.STRING, 0); }
		public Unit_BasicContext(UnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Basic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Basic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Basic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unit_DerivedContext extends UnitContext {
		public TerminalNode ID() { return getToken(UnitsParser.ID, 0); }
		public TerminalNode STRING() { return getToken(UnitsParser.STRING, 0); }
		public UnitsDerivationContext unitsDerivation() {
			return getRuleContext(UnitsDerivationContext.class,0);
		}
		public Unit_DerivedContext(UnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Derived(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Derived(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Derived(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unit_EquivalentContext extends UnitContext {
		public TerminalNode ID() { return getToken(UnitsParser.ID, 0); }
		public UnitsEquivalenceContext unitsEquivalence() {
			return getRuleContext(UnitsEquivalenceContext.class,0);
		}
		public Unit_EquivalentContext(UnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Equivalent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Equivalent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Equivalent(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unit_ClassContext extends UnitContext {
		public List<TerminalNode> ID() { return getTokens(UnitsParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(UnitsParser.ID, i);
		}
		public UnitsEquivalenceContext unitsEquivalence() {
			return getRuleContext(UnitsEquivalenceContext.class,0);
		}
		public Unit_ClassContext(UnitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unit);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Unit_BasicContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(ID);
				setState(52);
				match(STRING);
				}
				break;
			case 2:
				_localctx = new Unit_DerivedContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(ID);
				setState(54);
				match(STRING);
				setState(55);
				match(T__3);
				setState(56);
				unitsDerivation(0);
				}
				break;
			case 3:
				_localctx = new Unit_EquivalentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				match(ID);
				setState(58);
				match(T__3);
				setState(59);
				unitsEquivalence();
				}
				break;
			case 4:
				_localctx = new Unit_ClassContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				match(ID);
				setState(61);
				match(T__4);
				setState(62);
				match(ID);
				setState(63);
				match(T__5);
				setState(64);
				match(T__3);
				setState(65);
				unitsEquivalence();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitsEquivalenceContext extends ParserRuleContext {
		public List<EquivalentUnitContext> equivalentUnit() {
			return getRuleContexts(EquivalentUnitContext.class);
		}
		public EquivalentUnitContext equivalentUnit(int i) {
			return getRuleContext(EquivalentUnitContext.class,i);
		}
		public UnitsEquivalenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitsEquivalence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnitsEquivalence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnitsEquivalence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnitsEquivalence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitsEquivalenceContext unitsEquivalence() throws RecognitionException {
		UnitsEquivalenceContext _localctx = new UnitsEquivalenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unitsEquivalence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			equivalentUnit();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(69);
				match(T__6);
				setState(70);
				equivalentUnit();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquivalentUnitContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode ID() { return getToken(UnitsParser.ID, 0); }
		public EquivalentUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equivalentUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterEquivalentUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitEquivalentUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitEquivalentUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquivalentUnitContext equivalentUnit() throws RecognitionException {
		EquivalentUnitContext _localctx = new EquivalentUnitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equivalentUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__7);
			setState(77);
			value(0);
			setState(78);
			match(T__8);
			setState(79);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitsDerivationContext extends ParserRuleContext {
		public UnitsDerivationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitsDerivation; }
	 
		public UnitsDerivationContext() { }
		public void copyFrom(UnitsDerivationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Unit_Op_ParenthesisContext extends UnitsDerivationContext {
		public UnitsDerivationContext unitsDerivation() {
			return getRuleContext(UnitsDerivationContext.class,0);
		}
		public Unit_Op_ParenthesisContext(UnitsDerivationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Op_Parenthesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Op_Parenthesis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Op_Parenthesis(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unit_Op_MultDivContext extends UnitsDerivationContext {
		public Token op;
		public List<UnitsDerivationContext> unitsDerivation() {
			return getRuleContexts(UnitsDerivationContext.class);
		}
		public UnitsDerivationContext unitsDerivation(int i) {
			return getRuleContext(UnitsDerivationContext.class,i);
		}
		public Unit_Op_MultDivContext(UnitsDerivationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Op_MultDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Op_MultDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Op_MultDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unit_Op_IDContext extends UnitsDerivationContext {
		public TerminalNode ID() { return getToken(UnitsParser.ID, 0); }
		public Unit_Op_IDContext(UnitsDerivationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Op_ID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Op_ID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Op_ID(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unit_Op_PowerContext extends UnitsDerivationContext {
		public UnitsDerivationContext unitsDerivation() {
			return getRuleContext(UnitsDerivationContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(UnitsParser.NUMBER, 0); }
		public Unit_Op_PowerContext(UnitsDerivationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterUnit_Op_Power(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitUnit_Op_Power(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitUnit_Op_Power(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitsDerivationContext unitsDerivation() throws RecognitionException {
		return unitsDerivation(0);
	}

	private UnitsDerivationContext unitsDerivation(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		UnitsDerivationContext _localctx = new UnitsDerivationContext(_ctx, _parentState);
		UnitsDerivationContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_unitsDerivation, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				_localctx = new Unit_Op_ParenthesisContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(82);
				match(T__7);
				setState(83);
				unitsDerivation(0);
				setState(84);
				match(T__8);
				}
				break;
			case ID:
				{
				_localctx = new Unit_Op_IDContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(86);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(95);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new Unit_Op_MultDivContext(new UnitsDerivationContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_unitsDerivation);
						setState(89);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(90);
						((Unit_Op_MultDivContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__9 || _la==T__10) ) {
							((Unit_Op_MultDivContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(91);
						unitsDerivation(4);
						}
						break;
					case 2:
						{
						_localctx = new Unit_Op_PowerContext(new UnitsDerivationContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_unitsDerivation);
						setState(92);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(93);
						match(T__11);
						setState(94);
						match(NUMBER);
						}
						break;
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StructureDeclarationContext extends ParserRuleContext {
		public List<StructureContext> structure() {
			return getRuleContexts(StructureContext.class);
		}
		public StructureContext structure(int i) {
			return getRuleContext(StructureContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(UnitsParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(UnitsParser.EOL, i);
		}
		public StructureDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structureDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterStructureDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitStructureDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitStructureDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureDeclarationContext structureDeclaration() throws RecognitionException {
		StructureDeclarationContext _localctx = new StructureDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structureDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__12);
			setState(101);
			match(T__1);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(102);
				structure();
				setState(103);
				match(EOL);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(UnitsParser.ID, 0); }
		public TerminalNode STRING() { return getToken(UnitsParser.STRING, 0); }
		public UnitsAssociationContext unitsAssociation() {
			return getRuleContext(UnitsAssociationContext.class,0);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnitsListener ) ((UnitsListener)listener).exitStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnitsVisitor ) return ((UnitsVisitor<? extends T>)visitor).visitStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureContext structure() throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_structure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(ID);
			setState(113);
			match(STRING);
			setState(114);
			match(T__3);
			setState(115);
			unitsAssociation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
